--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <input type="date" id="date" name="dateString" required>
         <button type="button" onclick="formatAndSubmit()">SEARCH</button>
     </form>
+    Note: choose dates from 02/01/2024 - 02/03/2024 for testing.
 
 </div>
 
